# qsar_project

./: 01_data_collection.py  02_eda_descriptors.py  03_model_building.py  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: egfr_bioactivity_data.csv  egfr_data_lipinski.csv  egfr_fingerprints.csv
outputs/: variance_selection.pkl
