[project]
name = "qsar-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "rdkit>=2025.9.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "streamlit>=1.54.0",
]
